# zanao-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ai-review.md  capture-analysis.md  env-fields.md  monitor-mvp.md  qq-bot-integration.md  scheduled-run.md  zanao-parameter-capture.md
examples/: posts.sample.json
memory/: agents.md  gotchas.md  plan.md  progress.md  verify.md
scripts/: run_monitor.ps1  run_monitor.sh
src/zanao_monitor/: __init__.py  ai.py  cli.py  config.py  feishu.py  models.py  notifiers.py  rules.py  signing.py  sources.py  state.py  zanao_client.py
tests/: test_ai.py  test_cli.py  test_config.py  test_feishu.py  test_notifiers.py  test_rules.py  test_scripts.py  test_signing.py  test_sources.py  test_state.py  test_zanao_client.py
