[project]
name = "zanao-monitor"
version = "0.1.0"
description = "Campus market demand monitor with Feishu bot notifications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
